--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <div class="row align-items-center text-center text-md-start">
             <div class="col-md-6 mb-4 mb-md-0">
-                <img src="https://placehold.co/400x400/png" alt="Foto de perfil" 
+               <img src="./src/assets/img/perfil.jpg" alt="Foto de perfil"
                 class="img-fluid rounded-circle shadow-lg">
             </div>
             <div class="col-md-6">
@@ -147,13 +147,13 @@
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img src="https://placehold.co/1200x400/png" alt="Projeto 1" 
+                <img src="./src/assets/img/login.png" alt="Projeto 1 Login" 
                   class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
-                  <h5>Projeto 1</h5>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Fugit deserunt est quibusdam. A ad sint labore nihil nostrum neque itaque
+                  <h5>Projeto 1 - Página de Login</h5>
+                  <p>
                   </p>
+                  <!-- . define onde você está e .. retorna uma pasta -->
                   <a href="./src/pages/projeto_um.html" class="btn btn-gradient btn-sm">
                     Ver Projeto
                   </a>
