Definição do layout paginas de projeto

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
                   <h5>Projeto 1 - Página de Login</h5>
                   <p>
+                    Projeto desenvolvido durante a aula de Frontend exemplificando uma página de login
                   </p>
                   <!-- . define onde você está e .. retorna uma pasta -->
                   <a href="./src/pages/projeto_um.html" class="btn btn-gradient btn-sm">
@@ -161,14 +162,14 @@
               </div>
 
               <div class="carousel-item">
-                <img src="https://placehold.co/1200x400/png" alt="Projeto 2" 
+                <img src="./src/assets/img/portfolio-sobre.png" alt="Projeto 2 Portfolio" 
                   class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
-                  <h5>Projeto 2</h5>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Fugit deserunt est quibusdam. A ad sint labore nihil nostrum neque itaque
+                  <h5>Projeto 2 - Portfolio Pessoal</h5>
+                  <p>
+                    Projeto desenvolvido durante a aula de Frontend exemplificando um portfolio pessoal
                   </p>
-                  <a href="#" class="btn btn-gradient btn-sm">
+                  <a href="./src/pages/projeto_dois.html" class="btn btn-gradient btn-sm">
                     Ver Projeto
                   </a>
                 </div>
