--- a/src/pages/projeto_dois.html
+++ b/src/pages/projeto_dois.html
@@ -18,9 +18,9 @@
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="../../index.html">Portifólio</a>
+          <a class="navbar-brand" href="#">Portfolio</a>
           <button class="navbar-toggler" 
             type="button" 
             data-bs-toggle="collapse" 
@@ -34,13 +34,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="../../index.html#sobre">Sobre</a>
+                <a class="nav-link" href="/trabalho-portfolio/index.html#sobre">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../index.html#habilidades">Habilidades</a>
+                <a class="nav-link" href="/trabalho-portfolio/index.html#formação">Formação</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../index.html#projetos">Projetos</a>
+                <a class="nav-link" href="/trabalho-portfolio/index.html#projetos">Projetos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contato" 
@@ -60,22 +60,28 @@
                 <div>
                   <img class="img-projeto" src="../assets/img/portfolio.png" alt="Projeto 1 Login">
 
-                </div>
-
-                <h4>Descrição:</h4>
-                <p>
-                    Projeto desenvolvido durante a aula de Frontend exemplificando um portfolio pessoal. Apresenta uma saudação com animação, uma sessão 
+                <div id="colunas">
+                      <div class="row mt-4 text-center justify-content-center align-items-start">
+                      <!-- Coluna 1: Descrição -->
+                      <div class="col-md-6">
+                        <h4>Descrição:</h4>
+                        <p>
+                          Projeto desenvolvido durante a aula de Frontend exemplificando um portfolio pessoal. Apresenta uma saudação com animação, uma sessão 
                     falando sobre o desenvolvedor, uma sessão de habilidades e uma sessão de projetos desenvolvidos durante as aulas.
-                </p>
+                        </p>
+                      </div>
 
-                <h4>Tecnologias Utilizadas:</h4>
-                <p>
-                    HTML, CSS, JavaScript, Boostrap
-                </p>
-            </div>
+                      <!-- Coluna 2: Tecnologias -->
+                      <div class="col-md-6">
+                        <h4>Tecnologias Utilizadas:</h4>
+                        <p>HTML, CSS, JavaScript, Bootstrap</p>
+                      </div>
+                    </div>
+                  </div>
 
-                       
-            <div>
+                </div>
+   
+            <div class="text-center justify-content-center align-items-center">
               <button>Ver no GitHub</button>
               <button>Ver versão online</button>
             </div>
@@ -118,9 +124,21 @@
         </div>
        </div>
 
-       <footer class="text-center py-4">
-        <p>&copy; 2025 Senac. Todos os direitos reservados.</p>
-       </footer>
+       <footer>
+          <div class="footer-container">
+            <p>&copy; 2025 Senac. Todos os direitos reservados.</p>
+
+            <div class="redes-sociais">
+              <a href="https://github.com/ninaterragno" target="_blank">
+            <img src="../assets/img/github.png" alt="Rede Social GitHub">
+          </a>
+
+              <a href="https://linkedin.com/in/seulinkedin" target="_blank">
+            <img src="../assets/img/linkedin.png" alt="Rede Social Linkedin">
+          </a>
+            </div>
+          </div>
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
