--- a/src/pages/projeto_um.html
+++ b/src/pages/projeto_um.html
@@ -13,6 +13,7 @@
       rel="stylesheet" />
 
     <link rel="stylesheet" href="../assets/css/styles.css" />
+     <!-- CSS adicional, específico para as páginas internas -->
     <link rel="stylesheet" href="../assets/css/pages.css" />
   </head>
   <body>
@@ -20,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Portfolio</a>
+           <a class="navbar-brand" href="../../index.html">Portfolio</a>
           <button class="navbar-toggler" 
             type="button" 
             data-bs-toggle="collapse" 
@@ -34,13 +35,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/trabalho-portfolio/index.html#sobre">Sobre</a>
+                <a class="nav-link" href="../../index.html#sobre">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/trabalho-portfolio/index.html#formação">Formação</a>
+                <a class="nav-link" href="../../index.html#formação">Formação</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/trabalho-portfolio/index.html#projetos">Projetos</a>
+                <a class="nav-link" href="../../index.html#projetos">Projetos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contato" 
@@ -51,28 +52,29 @@
           </div>
         </div>
       </nav>
-
+      <!-- Conteudo principal -->
       <main class="container mt-5">
         <div class="row">
             <div class="col-12">
+                <!-- Título do projeto -->
                 <h1>Projeto 1 - Página de Login</h1>
-
+                <!-- Imagem do projeto -->
                 <div>
                   <img class="img-projeto" src="../assets/img/login.png" alt="Projeto 1 Login">
-
+                <!-- Bloco com colunas de descrição e tecnologias -->
                 <div id="colunas">
                       <div class="row mt-4 text-center justify-content-center align-items-start">
-                      <!-- Coluna 1: Descrição -->
+                       <!-- Coluna 1: Descrição do projeto -->
                       <div class="col-md-6">
                         <h4>Descrição:</h4>
                         <p>
                           Projeto inicial desenvolvido durante a aula de Frontend exemplificando uma página de login. 
                           Apresenta uma imagem de fundo e uma caixa central com informações básicas de um formulário,
-                          utilizadas para o usuário realizar o login desejado.
+                          utilizadas para o usuário realizar o login desejado. O botão é fictício e não envia o formulário realmente.
                         </p>
                       </div>
 
-                      <!-- Coluna 2: Tecnologias -->
+                       <!-- Coluna 2: Tecnologias usadas -->
                       <div class="col-md-6">
                         <h4>Tecnologias Utilizadas:</h4>
                         <p>HTML, CSS, JavaScript, Bootstrap</p>
@@ -81,11 +83,18 @@
                   </div>
 
                 </div>
-   
+            <!-- Botões abaixo das colunas -->
             <div class="text-center justify-content-center align-items-center">
-              <button>Ver no GitHub</button>
-              <button>Ver versão online</button>
+                <!-- Link para o repositório do GitHub -->
+              <a href="https://github.com/ninaterragno/exemplo-login">
+                <button>Ver no GitHub</button>
+               <!-- Botão para abrir versão online -->
+              </a>
+              <a href="https://ninaterragno.github.io/exemplo-login/">
+                <button>Ver versão online</button>
+              </a>
             </div>
+
         </div>
       </main>
 
@@ -100,25 +109,34 @@
                 data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-              <form>
+              <form id="form-contato">
                 <div class="mb-3">
-                  <label for="nome" class="form-label">Nome</label>
+                  <label for="nome" class="form-label">Nome Completo</label>
                   <input type="text" class="form-control" id="nome" 
-                    placeholder="Seu nome" />
+                    placeholder="Seu nome" required maxlength="40"/>
                 </div>
 
                 <div class="mb-3">
                   <label for="email" class="form-label">E-mail</label>
                   <input type="email" class="form-control" id="email" 
-                    placeholder="Seu e-mail" />
+                    placeholder="Seu e-mail" required 
+                    oninvalid="this.setCustomValidity('Informe um e-mail válido.')"
+                    oninput="this.setCustomValidity('')"
+                    />
                 </div>
 
                 <div class="mb-3">
                   <label for="mensagem" class="form-label">Mensagem</label>
                   <textarea id="mensagem" class="form-control"
-                    rows="4" placeholder="Escreva sua mensagem"></textarea>
+                    rows="4" placeholder="Escreva sua mensagem" required maxlength="500"></textarea>
                 </div>
                 <button type="submit" class="btn btn-gradient w-100">Enviar</button>
+
+                <div id="msg-sucesso" class="alert alert-success mt-3 d-none" role="alert">
+                  Enviado com sucesso, obrigada pelo contato!
+                </div>
+
+                
               </form>
             </div>
           </div>
@@ -131,12 +149,13 @@
 
             <div class="redes-sociais">
               <a href="https://github.com/ninaterragno" target="_blank">
-            <img src="../assets/img/github.png" alt="Rede Social GitHub">
+            <img src="../assets/img/github.png" alt="Icone GitHub">
           </a>
 
-              <a href="https://linkedin.com/in/seulinkedin" target="_blank">
-            <img src="../assets/img/linkedin.png" alt="Rede Social Linkedin">
+              <a href="https://www.linkedin.com/in/carolini-terragno-dos-santos-776a49397" target="_blank">
+            <img src="../assets/img/linkedin.png" alt="Icone Linkedin">
           </a>
+
             </div>
           </div>
         </footer>
@@ -146,6 +165,19 @@
 
     <script>
         AOS.init({duration: 1000, once: true});
+    </script>
+
+    <script>
+        document.getElementById('form-contato').addEventListener('submit', function(e) {
+          e.preventDefault(); // impede envio real
+
+          // exibe a mensagem de sucesso
+          const msg = document.getElementById('msg-sucesso');
+          msg.classList.remove('d-none');
+
+          // limpa os campos
+          this.reset();
+          });
     </script>
 </body>
 </html>
