Correção erro imagem projeto 2 persistente

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               </div>
               <!-- Projeto 2 -->
               <div class="carousel-item">
-                <img src="./src/assets/img/portfolio.PNG" alt="Projeto 2 Portfolio" 
+                <img src="./src/assets/img/portfolio.png" alt="Projeto 2 Portfolio" 
                   class="d-block w-100">
                 <div class="carousel-caption custom-caption rounded p-3">
                   <h5>Projeto 2 - Portfolio Pessoal</h5>
