--- a/src/pages/projeto_dois.html
+++ b/src/pages/projeto_dois.html
@@ -58,7 +58,7 @@
                 <h1>Projeto 2 - Portfolio Pessoal</h1>
 
                 <div>
-                  <img class="img-projeto" src="../assets/img/portfolio.PNG" alt="Projeto 2 Portfolio">
+                  <img class="img-projeto" src="../assets/img/portfolio.png" alt="Projeto 2 Portfolio">
 
                 <div id="colunas">
                       <div class="row mt-4 text-center justify-content-center align-items-start">
